use pre-wrap (which is very cool)

--- a/web/static/cli-test.html
+++ b/web/static/cli-test.html
@@ -324,7 +324,7 @@ jQuery(function ($) {
                 + '</div><div class="command-number">'
                 + " (" + ++command_number + ")"
                 + '</div><div class="command-output can-hide" '
-                +    'style="white-space: pre">';
+                +    'style="white-space: pre-wrap">';
 
         if (prefs.live_action) {
             content += '<img src="/icons/loading.png">';
